; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_sta_info.c_ap_sta_session_timeout.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/ap/extr_sta_info.c_ap_sta_session_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostapd_data = type { i32 }
%struct.sta_info = type { i32 }

@HOSTAPD_MODULE_IEEE80211 = common dso_local global i32 0, align 4
@HOSTAPD_LEVEL_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"setting session timeout to %d seconds\00", align 1
@ap_handle_session_timer = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ap_sta_session_timeout(%struct.hostapd_data* %0, %struct.sta_info* %1, i32 %2) #0 {
  %4 = alloca %struct.hostapd_data*, align 8
  %5 = alloca %struct.sta_info*, align 8
  %6 = alloca i32, align 4
  store %struct.hostapd_data* %0, %struct.hostapd_data** %4, align 8
  store %struct.sta_info* %1, %struct.sta_info** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.hostapd_data*, %struct.hostapd_data** %4, align 8
  %8 = load %struct.sta_info*, %struct.sta_info** %5, align 8
  %9 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @HOSTAPD_MODULE_IEEE80211, align 4
  %12 = load i32, i32* @HOSTAPD_LEVEL_DEBUG, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @hostapd_logger(%struct.hostapd_data* %7, i32 %10, i32 %11, i32 %12, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* @ap_handle_session_timer, align 4
  %16 = load %struct.hostapd_data*, %struct.hostapd_data** %4, align 8
  %17 = load %struct.sta_info*, %struct.sta_info** %5, align 8
  %18 = call i32 @eloop_cancel_timeout(i32 %15, %struct.hostapd_data* %16, %struct.sta_info* %17)
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @ap_handle_session_timer, align 4
  %21 = load %struct.hostapd_data*, %struct.hostapd_data** %4, align 8
  %22 = load %struct.sta_info*, %struct.sta_info** %5, align 8
  %23 = call i32 @eloop_register_timeout(i32 %19, i32 0, i32 %20, %struct.hostapd_data* %21, %struct.sta_info* %22)
  ret void
}

declare dso_local i32 @hostapd_logger(%struct.hostapd_data*, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @eloop_cancel_timeout(i32, %struct.hostapd_data*, %struct.sta_info*) #1

declare dso_local i32 @eloop_register_timeout(i32, i32, i32, %struct.hostapd_data*, %struct.sta_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
